@@ -1,5 +1,5 @@
 /****************************************************************************
-* Copyright (c) 2015 - 2016, CEA
+* Copyright (c) 2019, CEA
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -58,6 +58,9 @@ public:
   virtual const Champ_base&  get_champ(Champ& espace_stockage) const;
   virtual const Champ_base&  get_champ_without_evaluation(Champ& espace_stockage) const;
 
+  virtual Champ_Fonc& creer_espace_stockage(const Nature_du_champ& nature,
+                                            const int& nb_comp,
+                                            Champ_Fonc& es_tmp) const;
   const MorEqn& morceau() const;
   MorEqn& morceau();
   void completer(const Postraitement_base& post);
